add_executable(v0 ImplicitGEMM_v0.cu)
add_executable(v1_0 ImplicitGEMM_v1_0.cu)
add_executable(v1_1 ImplicitGEMM_v1_1.cu)
add_executable(v2 ImplicitGEMM_v2.cu)
add_executable(v3_0 ImplicitGEMM_v3_0.cu)
add_executable(v3_1 ImplicitGEMM_v3_1.cu)
add_executable(v3_2 ImplicitGEMM_v3_2.cu)
add_executable(v4 ImplicitGEMM_v4.cu)
add_executable(v5 ImplicitGEMM_v5.cu)
add_executable(v6 ImplicitGEMM_v6.cu)